--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
   
 
   <title>Cheon Ga Young</title>
@@ -116,7 +117,7 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fas fa-desktop text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Computer</h3>
+            <h3 class="h4 mb-2">Programming</h3>
             <p class="text-muted mb-0"></p>
           </div>
         </div>
@@ -216,20 +217,18 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0">Let's Get In Touch!</h2>
+          <h2 class="mt-0">My Idea</h2>
           <hr class="divider my-4">
           <p class="text-muted mb-5"></p>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center">
-          <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>010.9486.0968</div>
+            <i class="fas fa-map-marked-alt fas fa-2x"></i>
+          <div>오늘 뭐 할까?</div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
-          <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-          <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <div>tkekdzhd@naver.com</div>
+          <div>여러 지표를 토대로 최적의 코스를 추천해주는 웹서비스</div>
         </div>
       </div>
     </div>
