--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a class="nav-link js-scroll-trigger" href="#portfolio">Photo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">My Idea</a>
           </li>
         </ul>
       </div>
@@ -227,7 +227,7 @@
             <i class="fas fa-map-marked-alt fas fa-2x"></i>
           <div>오늘 뭐 할까?</div>
         </div>
-        <div class="col-lg-4 mr-auto text-center">
+        <div class="col-lg-6 mr-auto text-center">
           <div>여러 지표를 토대로 최적의 코스를 추천해주는 웹서비스</div>
         </div>
       </div>
